# aidoku-pt-br-sources

./: .gitignore  README.md  index.html  index.json  index.min.json  script.js  source.json  styles.css
.github/workflows/: build.yaml
pt-br.mangaflix/: Cargo.toml  mangaflix.wasm  source.json
pt-br.mangaflix/res/: source.json
pt-br.mangaflix/src/: lib.rs
public/: index.html
sources/: pt-br.lermangas-v2.aix  pt-br.mangaflix-v4.aix  pt-br.ninjacomics-v2.aix  pt-br.tsundoku-v8.aix
sources/pt-br.lermangas/: Cargo.toml
sources/pt-br.lermangas/res/: source.json
sources/pt-br.lermangas/src/: lib.rs
sources/pt-br.mangaflix/: Cargo.toml  package.aix
sources/pt-br.mangaflix/res/: source.json
sources/pt-br.mangaflix/src/: lib.rs
sources/pt-br.ninjacomics/: Cargo.toml
sources/pt-br.ninjacomics/res/: source.json
sources/pt-br.ninjacomics/src/: lib.rs
sources/pt-br.tsundoku/: Cargo.toml
sources/pt-br.tsundoku/.cargo/: config.toml
sources/pt-br.tsundoku/res/: source.json
sources/pt-br.tsundoku/src/: lib.rs
templates/libgroup/src/: home.rs  imp.rs  json.rs  lib.rs
templates/libgroup/src/auth/: mod.rs
templates/libgroup/src/cdn/: mod.rs
templates/libgroup/src/chapters/: mod.rs
templates/libgroup/src/models/: manga.rs
templates/madtheme/src/: imp.rs
